[package]
name = "Tests_UnorderedMap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "4.0.0"
near-contract-standards = "4.0.0"
uint = { version = "=0.9.0", default-features = false }
borsh = "0.9.3"
